hphp/test/zend/bad/ext/reflection/tests/ReflectionExtension_bug66218.php
<?php
$r = new ReflectionExtension('standard');
$t = $r->getFunctions();
var_dump($t['dl']);
?>
Done
